Closed Bug 555669 Opened 15 years ago Closed 15 years ago

CTypes.cpp failed to compile on Solaris

Categories

(Core :: js-ctypes, defect)

All
OpenSolaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Forgot to add the error message: Line 266: Error: The function "finite" must have a prototype.
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #435570 - Flags: review?(sayrer)
Attached patch patchSplinter Review
also on another file
Attachment #435570 - Attachment is obsolete: true
Attachment #435571 - Flags: review?(sayrer)
Attachment #435570 - Flags: review?(sayrer)
Attachment #435571 - Flags: review?(sayrer) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: