Bug 555669 CTypes.cpp failed to compile on Solaris r=sayrer